--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-es6-module-transpiler": "^0.6.0"
   },
   "devDependencies": {
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-mocha-test": "^0.12.0",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3"
