--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sinon": "^1.10.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
