--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "devDependencies": {
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-jsdoc-to-markdown": "^0.4.2",
     "grunt-mocha-test": "^0.12.0",
+    "is": "^2.0.1",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3"
   },
