--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "assert": "^1.1.2",
+    "es6-module-transpiler": "^0.6.2",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-jsdoc-to-markdown": "^0.4.2",
     "grunt-mocha-test": "^0.12.0",
     "is": "^2.0.1",
