--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-  "name": "stream",
-  "version": "0.0.0",
-  "description": "",
-  "main": "gruntfile.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-es6-module-transpiler": "^0.6.0"
-  },
-  "devDependencies": {
-    "assert": "^1.1.2",
-    "es6-module-transpiler": "^0.6.2",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsdoc": "^0.5.7",
-    "grunt-jsdoc-to-markdown": "^0.4.2",
-    "grunt-mocha-test": "^0.12.0",
-    "is": "^2.0.1",
-    "mocha": "^1.21.4",
-    "sinon": "^1.10.3"
-  },
-  "scripts": {
-    "test": "node_modules/.bin/grunt test"
-  },
+  "name": "streams",
+  "version": "0.0.1",
+  "author": "A. Matías Quezada <amatiasq@gmail.com>",
+  "license": "ISC",
+  "homepage": "https://github.com/amatiasq/streams",
   "repository": {
     "type": "git",
     "url": "git://github.com/amatiasq/streams.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/amatiasq/streams/issues"
   },
-  "homepage": "https://github.com/amatiasq/streams"
+  "scripts": {
+    "test": "mocha --compilers js:babel/register"
+  },
+  "devDependencies": {
+    "assert": "^1.3.0",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-runtime": "^5.8.25",
+    "core-js": "^1.2.1",
+    "inherits": "^2.0.1",
+    "is": "^3.1.0",
+    "mocha": "^2.3.3",
+    "sinon": "^1.17.1",
+    "systemjs": "^0.19.3"
+  }
 }
