--- a/.eslintrc
+++ b/.eslintrc
@@ -122,7 +122,7 @@ rules:
   consistent-this: [2, "self"]
   eol-last: 2
   func-names: 0
-  func-style: [2, "declaration"]
+  func-style: [1]
   indent: [2, 2]
   key-spacing: [2, { "beforeColon": false, "afterColon": true }]
   linebreak-style: [0, "unix"]
