--- a/package.json
+++ b/package.json
@@ -2,25 +2,15 @@
   "name": "stream",
   "version": "0.0.0",
   "description": "",
-  "main": "gruntfile.js",
+  "main": "gulpfile.js",
+  "license": "MIT",
+  "author": "A. Matías Quezada <amatiasq@gmail.com>",
+  "homepage": "https://github.com/amatiasq/streams",
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-es6-module-transpiler": "^0.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "assert": "^1.1.2",
-    "es6-module-transpiler": "^0.6.2",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsdoc": "^0.5.7",
-    "grunt-jsdoc-to-markdown": "^0.4.2",
-    "grunt-mocha-test": "^0.12.0",
     "is": "^2.0.1",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3"
@@ -32,10 +22,7 @@
     "type": "git",
     "url": "git://github.com/amatiasq/streams.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/amatiasq/streams/issues"
-  },
-  "homepage": "https://github.com/amatiasq/streams"
+  }
 }
