--- a/package.json
+++ b/package.json
@@ -7,27 +7,16 @@
     "test": "test"
   },
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-es6-module-transpiler": "^0.6.0"
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
-  "devDependencies": {
-    "assert": "^1.1.2",
-    "es6-module-transpiler": "^0.6.2",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsdoc": "^0.5.7",
-    "grunt-jsdoc-to-markdown": "^0.4.2",
-    "grunt-mocha-test": "^0.12.0",
-    "is": "^2.0.1",
-    "mocha": "^1.21.4",
-    "sinon": "^1.10.3"
-  },
-  "scripts": {
-    "test": "node_modules/.bin/grunt test"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git://github.com/amatiasq/streams.git"
